--- a/src/pylowl/proj/brightside/hdp/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/hdp/postproc/subgraphs.html
@@ -66,6 +66,8 @@ var lookup_node = function(node, n) {
 
 d3.json("graph.json", function(error, graph_root) {
     d3.json("subgraphs.json", function(error, root) {
+        var graphs_container = document.getElementById("graphs_container");
+
         var purple_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#c0c"]);
         var red_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#c03"]);
         var blue_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#30c"]);
