--- a/src/pylowl/proj/brightside/hdp/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/hdp/postproc/subgraphs.html
@@ -32,19 +32,34 @@ body {
 </head>
 <body>
 
-<div>
-	<div id="inputWindowParameters">
+<div id="inputWindowParameters">
     <div><a href="graph.html">graph</a></div>
     <div><a href="user_subgraphs.html">user subgraphs</a></div>
-	</div>
+    <div>
+        navigate:
+        <input type="button" onclick="shift_window(-1)"
+        value="<" />
+        <input type="button" onclick="shift_window(1)"
+        value=">" />
+        window size: <input id="window_size" maxlength="3"
+        size="3" type="text" onchange="update_window_size()" />
+    </div>
+    <div id="status">
+        showing subgraphs <span id="window_start_text"></span> to
+        <span id="window_end_text"></span> of <span
+            id="num_graphs_text"></span>
+    </div>
 </div>
 
-<div id="graphs_container">
-</div>
+<div id="graphs_container"></div>
 
 <script src="d3.v3.js"></script>
 
 <script>
+$window_size = 10;
+$window_start = 0;
+$num_windows = 0;
+$num_graphs = 0;
 
 
 var graph_length = function(node) {
@@ -63,88 +78,95 @@ var lookup_node = function(node, n) {
     return nested_node
 }
 
+$update_graphs = function() {
+    var graphs_container = document.getElementById("graphs_container");
+
+    var purple_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#c0c"]);
+    var red_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#c03"]);
+    var blue_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#30c"]);
+
+    var node_size = 10;
+    var K = graph_length($graph_root) + 1;
+    var L = graph_length($root[0]["sublist"]) + 1;
+
+    var svg_width = (L + 2) * node_size;
+    var svg_height = (K + 2) * node_size;
+
+    for (var m = $window_start; m < $window_end; ++m) {
+        var graph_container = document.createElement("div");
+        graph_container.className = "graph_container";
+        graphs_container.appendChild(graph_container);
+
+        var doc_id = $root[m]["doc_id"];
+        var doc_id_container = document.createElement("div");
+        graph_container.appendChild(doc_id_container);
+        var doc_id_text = document.createTextNode(doc_id);
+        doc_id_container.appendChild(doc_id_text);
+
+        var inner_graph_container = document.createElement("div");
+        graph_container.appendChild(inner_graph_container);
+
+        var svg = d3.select(inner_graph_container).append("svg")
+                .attr("width", svg_width)
+                .attr("height", svg_height)
+            .append("g")
+                .attr("transform", "translate(0,0)");
+
+        var left_header_rect = svg.selectAll(".left_header_node")
+                .data(d3.range(0, K))
+            .enter().append("rect")
+                .attr("class", "left_header_node")
+                .attr("width", node_size)
+                .attr("height", node_size)
+                .attr("y", function(k) { return (k + 2) * node_size; });
+
+        left_header_rect.style("stroke", "#cac")
+            .style("fill", function(k) {
+                node = lookup_node($graph_root, k);
+                return red_ramp(Math.exp(node.Elogpi));
+            });
+
+        var top_header_rect = svg.selectAll(".top_header_node")
+                .data(d3.range(0, L))
+            .enter().append("rect")
+                .attr("class", "top_header_node")
+                .attr("width", node_size)
+                .attr("height", node_size)
+                .attr("x", function(j) { return (j + 2) * node_size; });
+
+        top_header_rect.style("stroke", "#cac")
+            .style("fill", function(j) {
+                node = lookup_node($root[m]["sublist"], j);
+                return blue_ramp(Math.exp(node.Elogpi));
+            });
+
+        var rect = svg.selectAll(".node")
+                .data(d3.range(0, L*K))
+            .enter().append("rect")
+                .attr("class", "node")
+                .attr("width", node_size)
+                .attr("height", node_size)
+                .attr("x", function(d) { return (2 + (d % L)) * node_size; })
+                .attr("y", function(d) { return (2 + Math.floor(d / L)) * node_size; });
+
+        rect.style("stroke", "#cac")
+            .style("fill", function(d) {
+                var j = (d % L);
+                var k = Math.floor(d / L);
+                node = lookup_node($root[m]["sublist"], j);
+                return purple_ramp(node.phi[k]);
+            });
+    }
+}
 
 d3.json("graph.json", function(error, graph_root) {
+    $graph_root = graph_root;
     d3.json("subgraphs.json", function(error, root) {
-        var graphs_container = document.getElementById("graphs_container");
+        $root = root;
+        $num_graphs = root.length;
 
-        var purple_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#c0c"]);
-        var red_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#c03"]);
-        var blue_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#30c"]);
-
-        var node_size = 10;
-        var D = root.length;
-        var K = graph_length(graph_root) + 1;
-        var L = graph_length(root[0]["sublist"]) + 1;
-
-        var svg_width = (L + 2) * node_size;
-        var svg_height = (K + 2) * node_size;
-
-        for (var m = 0; m < D; ++m) {
-            var graph_container = document.createElement("div");
-            graph_container.className = "graph_container";
-            graphs_container.appendChild(graph_container);
-
-            var doc_id = root[m]["doc_id"];
-            var doc_id_container = document.createElement("div");
-            graph_container.appendChild(doc_id_container);
-            var doc_id_text = document.createTextNode(doc_id);
-            doc_id_container.appendChild(doc_id_text);
-
-            var inner_graph_container = document.createElement("div");
-            graph_container.appendChild(inner_graph_container);
-
-            var svg = d3.select(inner_graph_container).append("svg")
-                    .attr("width", svg_width)
-                    .attr("height", svg_height)
-                .append("g")
-                    .attr("transform", "translate(0,0)");
-
-            var left_header_rect = svg.selectAll(".left_header_node")
-                    .data(d3.range(0, K))
-                .enter().append("rect")
-                    .attr("class", "left_header_node")
-                    .attr("width", node_size)
-                    .attr("height", node_size)
-                    .attr("y", function(k) { return (k + 2) * node_size; });
-
-            left_header_rect.style("stroke", "#cac")
-                .style("fill", function(k) {
-                    node = lookup_node(graph_root, k);
-                    return red_ramp(Math.exp(node.Elogpi));
-                });
-
-            var top_header_rect = svg.selectAll(".top_header_node")
-                    .data(d3.range(0, L))
-                .enter().append("rect")
-                    .attr("class", "top_header_node")
-                    .attr("width", node_size)
-                    .attr("height", node_size)
-                    .attr("x", function(j) { return (j + 2) * node_size; });
-
-            top_header_rect.style("stroke", "#cac")
-                .style("fill", function(j) {
-                    node = lookup_node(root[m]["sublist"], j);
-                    return blue_ramp(Math.exp(node.Elogpi));
-                });
-
-            var rect = svg.selectAll(".node")
-                    .data(d3.range(0, L*K))
-                .enter().append("rect")
-                    .attr("class", "node")
-                    .attr("width", node_size)
-                    .attr("height", node_size)
-                    .attr("x", function(d) { return (2 + (d % L)) * node_size; })
-                    .attr("y", function(d) { return (2 + Math.floor(d / L)) * node_size; });
-
-            rect.style("stroke", "#cac")
-                .style("fill", function(d) {
-                    var j = (d % L);
-                    var k = Math.floor(d / L);
-                    node = lookup_node(root[m]["sublist"], j);
-                    return purple_ramp(node.phi[k]);
-                });
-        }
+        document.getElementById("window_size").value = $window_size;
+        update_window_size();
     });
 });
 
