--- a/src/pylowl/proj/brightside/hdp/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/hdp/postproc/subgraphs.html
@@ -55,6 +55,8 @@ body {
 
 <script src="d3.v3.js"></script>
 
+<script src="core.js"></script>
+
 <script>
 $window_size = 10;
 $window_start = 0;
@@ -122,7 +124,7 @@ $update_graphs = function() {
 
         left_header_rect.style("stroke", "#cac")
             .style("fill", function(k) {
-                node = lookup_node($graph_root, k);
+                var node = lookup_node($graph_root, k);
                 return red_ramp(Math.exp(node.Elogpi));
             });
 
@@ -136,7 +138,7 @@ $update_graphs = function() {
 
         top_header_rect.style("stroke", "#cac")
             .style("fill", function(j) {
-                node = lookup_node($root[m]["sublist"], j);
+                var node = lookup_node($root[m]["sublist"], j);
                 return blue_ramp(Math.exp(node.Elogpi));
             });
 
@@ -153,7 +155,7 @@ $update_graphs = function() {
             .style("fill", function(d) {
                 var j = (d % L);
                 var k = Math.floor(d / L);
-                node = lookup_node($root[m]["sublist"], j);
+                var node = lookup_node($root[m]["sublist"], j);
                 return purple_ramp(node.phi[k]);
             });
     }
