--- a/src/pylowl/proj/brightside/shdp/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/shdp/postproc/subgraphs.html
@@ -54,6 +54,8 @@ body {
 
 <script src="d3.v3.js"></script>
 
+<script src="core.js"></script>
+
 <script>
 $window_size = 10;
 $window_start = 0;
@@ -120,7 +122,7 @@ $update_graphs = function() {
 
         left_header_rect.style("stroke", "#cac")
             .style("fill", function(k) {
-                node = lookup_node($graph_root, k);
+                var node = lookup_node($graph_root, k);
                 return red_ramp(Math.exp(node.Elogpi));
             });
 
@@ -134,7 +136,7 @@ $update_graphs = function() {
 
         top_header_rect.style("stroke", "#cac")
             .style("fill", function(j) {
-                node = lookup_node($root[m]["sublist"], j);
+                var node = lookup_node($root[m]["sublist"], j);
                 return blue_ramp(Math.exp(node.Elogpi));
             });
 
@@ -151,7 +153,7 @@ $update_graphs = function() {
             .style("fill", function(d) {
                 var j = (d % J);
                 var k = Math.floor(d / J);
-                node = lookup_node($root[m]["sublist"], j);
+                var node = lookup_node($root[m]["sublist"], j);
                 return purple_ramp(node.zeta[k]);
             });
     }
