--- a/src/pylowl/proj/brightside/hdp/postproc/user_subgraphs.html
+++ b/src/pylowl/proj/brightside/hdp/postproc/user_subgraphs.html
@@ -37,16 +37,16 @@ body {
     <div><a href="subgraphs.html">subgraphs</a></div>
     <div>
         <label for="user_select">user:</label>
-        <select id="user_select" onChange="$update_graphs();"></select>
+        <select id="user_select" onChange="update_num_graphs(); $update_window_size(); $update_graphs();"></select>
 	</div>
     <div>
         navigate:
-        <input type="button" onclick="shift_window(-1)"
+        <input type="button" onclick="$shift_window(-1); $update_graphs();"
         value="<" />
-        <input type="button" onclick="shift_window(1)"
+        <input type="button" onclick="$shift_window(1); $update_graphs();"
         value=">" />
         window size: <input id="window_size" maxlength="3"
-        size="3" type="text" onchange="update_window_size()" />
+        size="3" type="text" onchange="$update_window_size(); $update_graphs();" />
     </div>
     <div id="status">
         showing subgraphs <span id="window_start_text"></span> to
@@ -62,7 +62,7 @@ body {
 <script src="core.js"></script>
 
 <script>
-$window_size = 10;
+$window_size = 5;
 $window_start = 0;
 $num_windows = 0;
 $num_graphs = 0;
@@ -97,6 +97,20 @@ var format_words = function(n) {
 }
 
 $update_graphs = function() {
+    var user_select = document.getElementById("user_select");
+    var selected_user = user_select.value;
+    var user_doc_indices = [];
+    for (var m = 0; m < $total_num_graphs; ++m) {
+        var user = $root[m]["user"];
+        if (selected_user == user) {
+            user_doc_indices.push(m);
+        }
+    }
+    $num_graphs = user_doc_indices.length;
+
+    $shift_window(0);
+    $update_nav_text();
+
     var graphs_container = document.getElementById("graphs_container");
     while (graphs_container.hasChildNodes()) {
         graphs_container.removeChild(graphs_container.firstChild);
@@ -113,19 +127,7 @@ $update_graphs = function() {
     var svg_width = (L + 4) * node_size;
     var svg_height = (K + 2) * node_size;
 
-    var user_select = document.getElementById("user_select");
-
-    var selected_user = user_select.value;
-
-    var user_doc_indices = [];
-    for (var m = 0; m < $num_graphs; ++m) {
-        var user = $root[m]["user"];
-        if (selected_user == user) {
-            user_doc_indices.push(m);
-        }
-    }
-
-    var summary_svg_width = user_doc_indices.length * node_size;
+    var summary_svg_width = $num_graphs * node_size;
     var summary_svg_height = K * node_size;
 
     var graph_container = document.createElement("div");
@@ -147,112 +149,129 @@ $update_graphs = function() {
             .attr("transform", "translate(0,0)");
 
     var summary_rect = svg.selectAll(".summary_node")
-            .data(d3.range(0, K*user_doc_indices.length))
+            .data(d3.range(0, K*$num_graphs))
         .enter().append("rect")
             .attr("class", "summary_node")
             .attr("width", node_size)
             .attr("height", node_size)
-            .attr("x", function(x) { return (x % user_doc_indices.length) * node_size; })
-            .attr("y", function(x) { return Math.floor(x / user_doc_indices.length) * node_size; });
+            .attr("x", function(x) { return (x % $num_graphs) * node_size; })
+            .attr("y", function(x) { return Math.floor(x / $num_graphs) * node_size; });
 
     summary_rect.style("stroke", "#cac")
         .style("fill", function(x) {
-            return blue_ramp($root[user_doc_indices[x % user_doc_indices.length]]["Ephi"][Math.floor(x / user_doc_indices.length)]);
+            return blue_ramp($root[user_doc_indices[x % $num_graphs]]["Ephi"][Math.floor(x / $num_graphs)]);
         });
 
-    for (var m = $window_start; m < $window_end; ++m) {
+    var user_m = 0;
+    for (var m = 0; m < $total_num_graphs; ++m) {
         var doc_id = $root[m]["doc_id"];
         var user = $root[m]["user"];
         var date_str = $root[m]["date_str"];
 
         if (selected_user == user) {
-            var graph_container = document.createElement("div");
-            graph_container.className = "graph_container";
-            graphs_container.appendChild(graph_container);
+            if (user_m >= $window_start && user_m < $window_end) {
+                var graph_container = document.createElement("div");
+                graph_container.className = "graph_container";
+                graphs_container.appendChild(graph_container);
 
-            var doc_id_container = document.createElement("div");
-            graph_container.appendChild(doc_id_container);
-            var doc_id_text = document.createTextNode(doc_id);
-            doc_id_container.appendChild(doc_id_text);
+                var doc_id_container = document.createElement("div");
+                graph_container.appendChild(doc_id_container);
+                var doc_id_text = document.createTextNode(doc_id);
+                doc_id_container.appendChild(doc_id_text);
 
-            var date_container = document.createElement("div");
-            graph_container.appendChild(date_container);
-            var date_text = document.createTextNode(date_str);
-            date_container.appendChild(date_text);
+                var date_container = document.createElement("div");
+                graph_container.appendChild(date_container);
+                var date_text = document.createTextNode(date_str);
+                date_container.appendChild(date_text);
 
-            var inner_graph_container = document.createElement("div");
-            graph_container.appendChild(inner_graph_container);
+                var inner_graph_container = document.createElement("div");
+                graph_container.appendChild(inner_graph_container);
 
-            var svg = d3.select(inner_graph_container).append("svg")
-                    .attr("width", svg_width)
-                    .attr("height", svg_height)
-                .append("g")
-                    .attr("transform", "translate(0,0)");
+                var svg = d3.select(inner_graph_container).append("svg")
+                        .attr("width", svg_width)
+                        .attr("height", svg_height)
+                    .append("g")
+                        .attr("transform", "translate(0,0)");
 
-            var global_left_header_rect = svg.selectAll(".global_left_header_node")
-                    .data(d3.range(0, K))
-                .enter().append("rect")
-                    .attr("class", "global_left_header_node")
-                    .attr("width", node_size)
-                    .attr("height", node_size)
-                    .attr("y", function(k) { return (k + 2) * node_size; });
+                var global_left_header_rect = svg.selectAll(".global_left_header_node")
+                        .data(d3.range(0, K))
+                    .enter().append("rect")
+                        .attr("class", "global_left_header_node")
+                        .attr("width", node_size)
+                        .attr("height", node_size)
+                        .attr("y", function(k) { return (k + 2) * node_size; });
 
-            global_left_header_rect.style("stroke", "#cac")
-                .style("fill", function(k) {
-                    var node = lookup_node($graph_root, k);
-                    return red_ramp(Math.exp(node.Elogpi));
-                });
+                global_left_header_rect.style("stroke", "#cac")
+                    .style("fill", function(k) {
+                        var node = lookup_node($graph_root, k);
+                        return red_ramp(Math.exp(node.Elogpi));
+                    });
 
-            var left_header_rect = svg.selectAll(".left_header_node")
-                    .data(d3.range(0, K))
-                .enter().append("rect")
-                    .attr("class", "left_header_node")
-                    .attr("width", node_size)
-                    .attr("height", node_size)
-                    .attr("x", function(k) { return 2 * node_size; })
-                    .attr("y", function(k) { return (k + 2) * node_size; });
+                var left_header_rect = svg.selectAll(".left_header_node")
+                        .data(d3.range(0, K))
+                    .enter().append("rect")
+                        .attr("class", "left_header_node")
+                        .attr("width", node_size)
+                        .attr("height", node_size)
+                        .attr("x", function(k) { return 2 * node_size; })
+                        .attr("y", function(k) { return (k + 2) * node_size; });
 
-            left_header_rect.style("stroke", "#cac")
-                .style("fill", function(k) {
-                    return blue_ramp($root[m]["Ephi"][k]);
-                });
+                left_header_rect.style("stroke", "#cac")
+                    .style("fill", function(k) {
+                        return blue_ramp($root[m]["Ephi"][k]);
+                    });
 
-            var top_header_rect = svg.selectAll(".top_header_node")
-                    .data(d3.range(0, L))
-                .enter().append("rect")
-                    .attr("class", "top_header_node")
-                    .attr("width", node_size)
-                    .attr("height", node_size)
-                    .attr("x", function(j) { return (j + 4) * node_size; });
+                var top_header_rect = svg.selectAll(".top_header_node")
+                        .data(d3.range(0, L))
+                    .enter().append("rect")
+                        .attr("class", "top_header_node")
+                        .attr("width", node_size)
+                        .attr("height", node_size)
+                        .attr("x", function(j) { return (j + 4) * node_size; });
 
-            top_header_rect.style("stroke", "#cac")
-                .style("fill", function(j) {
-                    var node = lookup_node($root[m]["sublist"], j);
-                    return blue_ramp(Math.exp(node.Elogpi));
-                });
+                top_header_rect.style("stroke", "#cac")
+                    .style("fill", function(j) {
+                        var node = lookup_node($root[m]["sublist"], j);
+                        return blue_ramp(Math.exp(node.Elogpi));
+                    });
 
-            var rect = svg.selectAll(".node")
-                    .data(d3.range(0, L*K))
-                .enter().append("rect")
-                    .attr("class", "node")
-                    .attr("width", node_size)
-                    .attr("height", node_size)
-                    .attr("x", function(d) { return (4 + (d % L)) * node_size; })
-                    .attr("y", function(d) { return (2 + Math.floor(d / L)) * node_size; });
+                var rect = svg.selectAll(".node")
+                        .data(d3.range(0, L*K))
+                    .enter().append("rect")
+                        .attr("class", "node")
+                        .attr("width", node_size)
+                        .attr("height", node_size)
+                        .attr("x", function(d) { return (4 + (d % L)) * node_size; })
+                        .attr("y", function(d) { return (2 + Math.floor(d / L)) * node_size; });
 
-            rect.style("stroke", "#cac")
-                .style("fill", function(d) {
-                    var j = (d % L);
-                    var k = Math.floor(d / L);
-                    var node = lookup_node($root[m]["sublist"], j);
-                    return purple_ramp(node.phi[k]);
-                })
-                .append("title")
-                .text(function(d) {
-                    var j = (d % L);
-                    var k = Math.floor(d / L);
-                    return k + ": " + format_words(k);
-                });
+                rect.style("stroke", "#cac")
+                    .style("fill", function(d) {
+                        var j = (d % L);
+                        var k = Math.floor(d / L);
+                        var node = lookup_node($root[m]["sublist"], j);
+                        return purple_ramp(node.phi[k]);
+                    })
+                    .append("title")
+                    .text(function(d) {
+                        var j = (d % L);
+                        var k = Math.floor(d / L);
+                        return k + ": " + format_words(k);
+                    });
+            }
+
+            ++user_m;
+        }
+    }
+}
+
+update_num_graphs = function() {
+    var user_select = document.getElementById("user_select");
+    var selected_user = user_select.value;
+    $num_graphs = 0;
+    for (var m = 0; m < $total_num_graphs; ++m) {
+        var user = $root[m]["user"];
+        if (selected_user == user) {
+            ++$num_graphs;
         }
     }
 }
@@ -261,13 +280,13 @@ d3.json("graph.json", function(error, graph_root) {
     $graph_root = graph_root;
     d3.json("user_subgraphs.json", function(error, root) {
         $root = root;
-        $num_graphs = root.length;
+        $total_num_graphs = root.length;
 
         var user_select = document.getElementById("user_select");
 
         var users = {};
 
-        for (var m = 0; m < $num_graphs; ++m) {
+        for (var m = 0; m < $total_num_graphs; ++m) {
             var user = $root[m]["user"];
 
             if (! (user in users)) {
@@ -281,8 +300,10 @@ d3.json("graph.json", function(error, graph_root) {
             }
         }
 
+        update_num_graphs();
         document.getElementById("window_size").value = $window_size;
-        update_window_size();
+        $update_window_size();
+        $update_graphs();
     });
 });
 
