--- a/src/pylowl/proj/brightside/m0/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/m0/postproc/subgraphs.html
@@ -54,12 +54,12 @@ body {
     <div><a href="graph.html">graph</a></div>
     <div>
         navigate:
-        <input type="button" onclick="shift_window(-1)"
+        <input type="button" onclick="$shift_window(-1); $update_graphs();"
         value="<" />
-        <input type="button" onclick="shift_window(1)"
+        <input type="button" onclick="$shift_window(1); $update_graphs();"
         value=">" />
         window size: <input id="window_size" maxlength="3"
-        size="3" type="text" onchange="update_window_size()" />
+        size="3" type="text" onchange="$update_window_size(); $update_graphs();" />
     </div>
     <div id="status">
         showing subgraphs <span id="window_start_text"></span> to
@@ -79,7 +79,7 @@ body {
 <script src="core.js"></script>
 
 <script>
-$window_size = 10;
+$window_size = 5;
 $window_start = 0;
 $num_windows = 0;
 $num_graphs = 0;
@@ -99,7 +99,7 @@ var diagonal = d3.svg.diagonal()
     });
 
 $update_graphs = function() {
-    update_nav_text();
+    $update_nav_text();
 
     var graphs_container = document.getElementById("graphs_container");
     while (graphs_container.hasChildNodes()) {
@@ -167,7 +167,7 @@ $update_graphs = function() {
         .style("stroke", "black")
         .style("stroke-opacity", function(d){return d.active ? (d.circled? "1":"0"): (d.circled? ".15":"0")})
         .style("fill-opacity", "0")
-		.on("click", function(d){filter_node_first(d)})
+		.on("click", function(d){$filter_node_first(d); $update_graphs();})
         .append("title")
         .text(format_words);
 
@@ -196,7 +196,8 @@ d3.json("graph.json", function(error, graph_root) {
         $height = $maxNodeSize * 2.5 * eff_size + $maxNodeSize;
 
         document.getElementById("window_size").value = $window_size;
-        update_window_size();
+        $update_window_size();
+        $update_graphs();
 
         d3.select(self.frameElement).style("height", $height + "px");
     });
