--- a/src/pylowl/proj/brightside/shdp/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/shdp/postproc/subgraphs.html
@@ -36,12 +36,12 @@ body {
     <div><a href="graph.html">graph</a></div>
     <div>
         navigate:
-        <input type="button" onclick="shift_window(-1)"
+        <input type="button" onclick="$shift_window(-1); $update_graphs();"
         value="<" />
-        <input type="button" onclick="shift_window(1)"
+        <input type="button" onclick="$shift_window(1); $update_graphs();"
         value=">" />
         window size: <input id="window_size" maxlength="3"
-        size="3" type="text" onchange="update_window_size()" />
+        size="3" type="text" onchange="$update_window_size(); $update_graphs();" />
     </div>
     <div id="status">
         showing subgraphs <span id="window_start_text"></span> to
@@ -57,7 +57,7 @@ body {
 <script src="core.js"></script>
 
 <script>
-$window_size = 10;
+$window_size = 5;
 $window_start = 0;
 $num_windows = 0;
 $num_graphs = 0;
@@ -79,7 +79,12 @@ var lookup_node = function(node, n) {
 }
 
 $update_graphs = function() {
+    $update_nav_text();
+
     var graphs_container = document.getElementById("graphs_container");
+    while (graphs_container.hasChildNodes()) {
+        graphs_container.removeChild(graphs_container.firstChild);
+    }
 
     var purple_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#c0c"]);
     var red_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#c03"]);
@@ -166,7 +171,8 @@ d3.json("graph.json", function(error, graph_root) {
         $num_graphs = root.length;
 
         document.getElementById("window_size").value = $window_size;
-        update_window_size();
+        $update_window_size();
+        $update_graphs();
     });
 });
 
