--- a/src/pylowl/proj/brightside/hdp/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/hdp/postproc/subgraphs.html
@@ -37,12 +37,12 @@ body {
     <div><a href="user_subgraphs.html">user subgraphs</a></div>
     <div>
         navigate:
-        <input type="button" onclick="$shift_window(-1); $update_graphs();"
+        <input type="button" onclick="$shift_window(-1); update_graphs();"
         value="<" />
-        <input type="button" onclick="$shift_window(1); $update_graphs();"
+        <input type="button" onclick="$shift_window(1); update_graphs();"
         value=">" />
         window size: <input id="window_size" maxlength="3"
-        size="3" type="text" onchange="$update_window_size(); $update_graphs();" />
+        size="3" type="text" onchange="$update_window_size(); update_graphs();" />
     </div>
     <div id="status">
         showing subgraphs <span id="window_start_text"></span> to
@@ -80,7 +80,7 @@ var lookup_node = function(node, n) {
     return nested_node
 }
 
-$update_graphs = function() {
+update_graphs = function() {
     $update_nav_text();
 
     var graphs_container = document.getElementById("graphs_container");
@@ -174,7 +174,7 @@ d3.json("graph.json", function(error, graph_root) {
 
         document.getElementById("window_size").value = $window_size;
         $update_window_size();
-        $update_graphs();
+        update_graphs();
     });
 });
 
