--- a/src/pylowl/proj/brightside/hdp/postproc/user_subgraphs.html
+++ b/src/pylowl/proj/brightside/hdp/postproc/user_subgraphs.html
@@ -37,16 +37,16 @@ body {
     <div><a href="subgraphs.html">subgraphs</a></div>
     <div>
         <label for="user_select">user:</label>
-        <select id="user_select" onChange="update_num_graphs(); $update_window_size(); $update_graphs();"></select>
+        <select id="user_select" onChange="update_num_graphs(); $update_window_size(); update_graphs();"></select>
 	</div>
     <div>
         navigate:
-        <input type="button" onclick="$shift_window(-1); $update_graphs();"
+        <input type="button" onclick="$shift_window(-1); update_graphs();"
         value="<" />
-        <input type="button" onclick="$shift_window(1); $update_graphs();"
+        <input type="button" onclick="$shift_window(1); update_graphs();"
         value=">" />
         window size: <input id="window_size" maxlength="3"
-        size="3" type="text" onchange="$update_window_size(); $update_graphs();" />
+        size="3" type="text" onchange="$update_window_size(); update_graphs();" />
     </div>
     <div id="status">
         showing subgraphs <span id="window_start_text"></span> to
@@ -96,7 +96,7 @@ var format_words = function(n) {
     return s;
 }
 
-$update_graphs = function() {
+update_graphs = function() {
     var user_select = document.getElementById("user_select");
     var selected_user = user_select.value;
     var user_doc_indices = [];
@@ -303,7 +303,7 @@ d3.json("graph.json", function(error, graph_root) {
         update_num_graphs();
         document.getElementById("window_size").value = $window_size;
         $update_window_size();
-        $update_graphs();
+        update_graphs();
     });
 });
 
