--- a/src/pylowl/proj/brightside/m0/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/m0/postproc/subgraphs.html
@@ -54,12 +54,12 @@ body {
     <div><a href="graph.html">graph</a></div>
     <div>
         navigate:
-        <input type="button" onclick="$shift_window(-1); $update_graphs();"
+        <input type="button" onclick="$shift_window(-1); update_graphs();"
         value="<" />
-        <input type="button" onclick="$shift_window(1); $update_graphs();"
+        <input type="button" onclick="$shift_window(1); update_graphs();"
         value=">" />
         window size: <input id="window_size" maxlength="3"
-        size="3" type="text" onchange="$update_window_size(); $update_graphs();" />
+        size="3" type="text" onchange="$update_window_size(); update_graphs();" />
     </div>
     <div id="status">
         showing subgraphs <span id="window_start_text"></span> to
@@ -68,7 +68,7 @@ body {
     </div>
     <div id="showCounts">
         <label for="showValues">show counts: </label><input type="checkbox"
-        onchange="$update_graphs();" id="showValues"/>
+        onchange="update_graphs();" id="showValues"/>
     </div>
 </div>
 
@@ -98,7 +98,7 @@ var diagonal = d3.svg.diagonal()
         return t;
     });
 
-$update_graphs = function() {
+update_graphs = function() {
     $update_nav_text();
 
     var graphs_container = document.getElementById("graphs_container");
@@ -167,7 +167,7 @@ $update_graphs = function() {
         .style("stroke", "black")
         .style("stroke-opacity", function(d){return d.active ? (d.circled? "1":"0"): (d.circled? ".15":"0")})
         .style("fill-opacity", "0")
-		.on("click", function(d){$filter_node_first(d); $update_graphs();})
+		.on("click", function(d){$filter_node_first(d); update_graphs();})
         .append("title")
         .text(format_words);
 
@@ -197,7 +197,7 @@ d3.json("graph.json", function(error, graph_root) {
 
         document.getElementById("window_size").value = $window_size;
         $update_window_size();
-        $update_graphs();
+        update_graphs();
 
         d3.select(self.frameElement).style("height", $height + "px");
     });
