--- a/src/pylowl/proj/brightside/m0/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/m0/postproc/subgraphs.html
@@ -106,7 +106,7 @@ update_graphs = function() {
         graphs_container.removeChild(graphs_container.firstChild);
     }
 
-    var stringColor =
+    var ramp =
     d3.scale.linear().domain([0,-1*$minELogPi]).range(["red","blue"]);
 
     for (var c = $window_start; c < $window_end; ++c) {
@@ -153,9 +153,9 @@ update_graphs = function() {
         node.append("circle")
 		.attr("r", function(d){return node_size(d);})
         .style("fill", function(d) {return d.active ?
-               stringColor(d.Elogpi*-1) : "black"})
+               ramp(d.Elogpi*-1) : "black"})
         .style("stroke", function(d) {return d.active ?
-               stringColor(d.Elogpi*-1) : "black"})
+               ramp(d.Elogpi*-1) : "black"})
         .style("stroke-opacity", function(d) { return d.active ?
                (0.1 + 0.9*(d.Elogpi-$minELogPi)/($minELogPi*-1)) : "0.1"; })
         .style("fill-opacity", function(d) { return d.active ?
